<resources>
    <string name="app_name">SamLib Инфо</string>
    <string name="app_nm">SamLib: </string>
    <string name="author_url">фамилия или http://samlib.ru/&#8230;</string>
    <string name="author_name">Фамилия автора</string>
    <string name="author_tag">Новый тэг</string>
    <string name="author_add_desc">Для добавления автора введите его фамилию или полный URL его страницы самиздата</string>
    <string name="update_update">Обновление</string>
    <string name="group_book_number">Книг:</string>
    <string name="group_book_number_new">из них новых:</string>
    <string name="group_book_new">Новые</string>
    <string name="group_book_all">Все</string>
    <string name="dialog_title_filtr">Категория авторов</string>
    <string name="dialog_title_file">Выбор файла</string>
    <string name="dialog_title_edit_author">Имя автора</string>
    <string name="dialog_title_sort_author">Сортировка Авторов</string>
    <string name="dialog_title_sort_book">Сортировка Книг</string>
    <string name="button_add">Искать/Добавить</string>
    <string name="button_addonly">Добавить</string>
    <string name="button_search">Искать</string>
    <string name="SamLib">SamLib</string>
    <string name="ZhurnalLib">ZhurnalLib</string>
    <string name="BudClub">BudClub</string>
    <string name="SamLibUrl">http://samlib.ru</string>
    <string name="ZhurnalLibUrl">http://zhurnal.lib.ru</string>
    <string name="BudClubUrl">http://budclub.ru</string>
    <string name="menu_read">Отметить как прочитаное</string>
    <string name="menu_open_web">Открыть в браузере</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_refresh">Обновить</string>
    <string name="menu_add">Добавить</string>
    <string name="menu_search">Искать/Добавить</string>
    <string name="menu_sort">Сортировка</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_archive">Данные</string>
    <string name="menu_tags">Группы авторов</string>
    <string name="menu_filter">Фильтр</string>
    <string name="menu_edit">Изменить</string>
    <string name="menu_selected">Добавить в избранное</string>
    <string name="menu_deselected">Исключить из избранного</string>
    <string name="menu_selected_go">Избранные книги</string>
    <string name="menu_reload">Перезагрузить</string>
    <string name="menu_set_fixed">Хранить все версии</string>
    <string name="menu_set_unfixed">Хранить одну версию</string>
    <string name="menu_version_choose">Читать версию</string>
    <string name="sort_update_date">По времени обновления</string>
    <string name="sort_author_name">По имени автора</string>
    <string name="sort_book_mtime">По времени обновления</string>
    <string name="sort_book_title">По названию книги</string>
    <string name="sort_book_date">По дате</string>
    <string name="sort_book_size">По объему</string>
    <string name="filter_new">Только новые</string>
    <string name="filter_all">Все</string>
    <string name="tag_edit_title">Изменение названия тэга</string>
    <string name="add_success">Автор добавлен</string>
    <string name="add_success_multi">Добавлено авторов:</string>
    <string name="add_error">Ошибка добавления автора</string>
    <string name="add_error_double">Этот автор уже есть в базе!</string>
    <string name="add_author_title">Добавить URL автора</string>
    <string name="add_success_double">Повторов авторов:</string>
    <string name="import_author_result">Результат импорта авторов</string>
    <string name="del_success">Автор удалён</string>
    <string name="del_error">Ошибка удаления автора</string>
    <string name="no_such_application_to_view">У Вас нет приложения для просмотра данного типа файлов!</string>
    <string name="author_search_error">Ошибка поиска</string>
    <string name="author_search_empty">Ничего не найдено</string>
    <string name="author_search_limit">Превышен лимит результата поиска</string>
    <string name="Cancel">Отмена</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="Attention">Внимание!</string>
    <string name="alert_import">Вы уверены? Все данные будут полностью заменены данными из файла __!</string>
    <string name="alert_delete_author">Вы уверены? Все данные об авторе \"__\" будут удалены!</string>
    <string name="alert_tag_delete">Вы уверены? Тэги \"__\" у все авторов будут удалены!</string>
    <string name="alert_add_author">Вы уверены, что хотите добавить автора  \"__\" в базу?</string>
    <string name="notification_updates">Обновления на самиздате</string>
    <string name="notification_error">Ошибка обновления SamLib</string>
    <string name="notification_update_error_detais">Произошла ошибка соединения с SamLib!</string>
    <string name="notification_title_author">Проверка автора:</string>
    <string name="notification_title_TAG">Проверка авторов:</string>
    <string name="notification_title_TAG_ALL">Проверка всех авторов</string>
    <string name="notification_title_TAG_NEW">Проверка новых авторов</string>
    <string name="notification_summary">Количество обновлений:</string>
    <string name="author_update">Обновление у автора: </string>
    <string name="author_update_number">Количество обновлений:</string>
    <string name="toast_update_good_empty">Нет свежих обновлений.</string>
    <string name="toast_update_good_good">Есть обновления!</string>
    <string name="toast_update_error">Ошибка обновления</string>
    <string name="pref_key_flag_background_update">pref_key_flag_background_update</string>
    <string name="pref_title_background_update_flag">Aвтоматическое обновление</string>
    <string name="pref_summary_background_update_flag">Включить</string>
    <string name="pref_key_update_Period">pref_key_update_Period</string>
    <string name="pref_title_update_Period">Частота обновлений</string>
    <string name="pref_default_update_Period">3HOUR</string>
     <string name="pref_background_update_autoload_flag">Автозагрузка</string>
     <string name="pref_background_update_autoload_flag_summ">Загрузка обновлений при проверке</string>
     <string name="pref_key_flag_background_update_autoload">pref_key_flag_background_update_autoload</string>
     <string name="pref_key_update_autoload_limit">pref_key_update_autoload_limit</string>
     <string name="pref_title_update_autoload_limit">Ограничить загрузку</string>
     <string name="pref_default_update_atutoload_limit">40</string>
    <string name="pref_key_update_delay">pref_key_update_delay</string>
    <string name="pref_title_update_delay">Задержка проверки авторов</string>
    <string name="pref_summary_update_delay">задержка от 5 до 15 секунд после проверки каждого автора</string>
    <string name="pref_key_flag_wihi_only">pref_key_flag_wihi_only</string>
    <string name="pref_title_wihi_only">Только по Wifi</string>
    <string name="pref_key_update_tag">pref_key_update_tag</string>
    <string name="pref_title_update_tag">Проверяем авторов с тэгом …</string>
    <string name="pref_key_flag_roaming_work">pref_key_flag_roaming_work</string>
    <string name="pref_title_roaming_work">Работать в роуминге</string>
    <string name="pref_key_directory">pref_key_directory</string>
    <string name="pref_title_directory">Папка данных</string>
    <string name="pref_key_ignore_connect_error">pref_key_ignore_connect_error</string>
    <string name="pref_title_ignore_con_err">Не информировать об ошибках</string>
    <string name="pref_summary_ignore_con_err">Обычно вызваны плохой связью</string>
    <string name="pref_key_use_proxy_wifi_flag">pref_key_use_proxy_wifi_flag</string>
    <string name="pref_title_use_proxy_wifi">Только для WIFI</string>
    <string name="pref_key_use_proxy_flag">pref_key_use_proxy_flag</string>
    <string name="pref_title_proxy">Настройки маршрутизации</string>
    <string name="pref_title_use_proxy">Использовать прокси</string>
    <string name="pref_key_proxy_user">pref_key_proxy_user</string>
    <string name="pref_key_proxy_password">pref_key_proxy_password</string>
    <string name="pref_key_proxy_host">pref_key_proxy_host</string>
    <string name="pref_key_proxy_port">pref_key_proxy_port</string>
    <string name="pref_interface_title">Интерфейс</string>
    <string name="pref_interface_autmark_title">Автометка</string>
    <string name="pref_interface_autmark_desc">Снимает метку обновления при открытии закладки</string>
    <string name="pref_key_flag_automark">pref_key_flag_automark</string>
    <string name="pref_key_debug_options">pref_key_debug_options</string>
    <string name="pref_title_Debug_Option">Режим отладки</string>
    <string name="pref_summary_debug_flag">Включает вывод дополнительной информации для отладки</string>
    <string name="pref_title_limit_booke_lifetime">Ограничить время жизни книг</string>
    <string name="pref_key_flag_limit_booke_lifetime">pref_key_flag_limit_booke_lifetime</string>
    <string name="pref_limit_booke_lifetime_summ">Книги будут удаляться после истечения срока</string>
    <string name="pref_key_book_lifetime">pref_key_book_lifetime</string>
    <string name="pref_title_book_lifetime">Время жизни книг</string>
    <string name="pref_default_book_lifetime">30</string>
    <string name="pref_key_author_order">pref_key_author_order</string>
    <string name="pref_title_author_order">Сортировка авторов</string>
    <string name="pref_default_author_order">AuthorName</string>
    <string name="pref_key_book_order">pref_key_book_order</string>
    <string name="pref_title_book_order">Сортировка книг</string>
    <string name="pref_default_book_order">BookDate</string>
    <string name="pref_key_google_account">pref_key_google_account</string>
    <string name="pref_title_google_account">Google Account</string>
    <string name="pref_key_notification_ringtone">pref_key_notification_ringtone</string>
    <string name="pref_title_notification_ringtone">Звук оповещения</string>
    <string name="pref_default_notification_ringtone">content://settings/system/notification_sound</string>
    <string name="pref_key_file_format">pref_key_file_format</string>
    <string name="pref_title_file_format">Формат файла</string>
    <string name="pref_default_file_format">HTML</string>
    <string name="pref_key_theme">pref_key_theme</string>
    <string name="pref_title_theme">Тема</string>
    <string name="pref_default_theme">DARK</string>
    <string name="pref_key_flag_anim">pref_key_flag_anim</string>
    <string name="pref_interface_anim_title">Анимация</string>
    <string name="pref_interface_anim_desc">Включить анимацию перехода к книгам</string>
    <string name="pref_key_flag_update_ticker">pref_key_flag_update_ticker</string>
    <string name="pref_interface_update_ticker_title">Заголовок Уведомления</string>
    <string name="pref_interface_update_ticker_desc">Включить заголовок уведомления при проверке обновлений</string>
    <string name="pref_key_mirror">pref_key_mirror</string>
    <string name="pref_title_mirror">Первое зеркало</string>
    <string name="pref_default_mirror">SamLib</string>
    <string name="arc_title1_db">Backup/Restore</string>
    <string name="bt_export">Сохранить</string>
    <string name="bt_import">Загрузить</string>
    <string name="arc_export_db_text">Создать копию базы</string>
    <string name="arc_import_db_text">Восстановить базу из копии</string>
    <string name="arc_title2_db">Текст/HTML URL Export/Import</string>
    <string name="arc_export_text_text">Выгрузить список авторов</string>
    <string name="arc_import_text_text">Загрузить список авторов.  Для успешной работы необходима устойчивая связь с сайтом самизата!</string>
    <string name="arc_title_google">Google Disk Export/Import</string>
    <string name="arc_export_google">Выгрузить базу</string>
    <string name="arc_import_google">Загрузить базу</string>
    <string name="arc_google_auto">Автоматиеское сохранение.</string>
    <string name="cb_auto_backup">автобэкап</string>
</resources>