<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"

>
    <group android:checkableBehavior="none">
        <item
                android:id="@+id/dr_search"
                android:icon="?attr/iconSearch"
                android:title="@string/menu_search"/>
        <item
                android:id="@+id/dr_selected"
                android:icon="?attr/iconSelected"
                android:title="@string/menu_selected_go"/>

        <item
                android:id="@+id/dr_data"
                android:icon="?attr/iconArchive"
                android:title="@string/menu_archive"/>
        <item
                android:id="@+id/dr_setting"
                android:icon="?attr/iconSettings"
                android:title="@string/menu_settings"/>

        <item
                android:id="@+id/navigation_subheader_author"
                android:title="@string/dialog_title_sort_author">
            <menu>
                <group
                        android:id="@+id/gr_authors"
                        android:checkableBehavior="single">
                    <item
                            android:id="@+id/author_sort_name"

                            android:title="@string/sort_author_name"/>
                    <item
                            android:id="@+id/author_sort_upadte"

                            android:title="@string/sort_update_date"/>
                </group>
            </menu>
        </item>

        <item
                android:id="@+id/navigation_subheader_books"
                android:title="@string/dialog_title_sort_book">
            <menu>
                <group
                        android:id="@+id/gr_books"
                        android:checkableBehavior="single">
                    <item
                            android:id="@+id/sort_book_date"

                            android:title="@string/sort_book_date"/>
                    <item
                            android:id="@+id/sort_book_mtime"

                            android:title="@string/sort_book_mtime"/>
                    <item
                            android:id="@+id/sort_book_title"

                            android:title="@string/sort_book_title"/>
                    <item
                            android:id="@+id/sort_book_size"

                            android:title="@string/sort_book_size"/>

                </group>
            </menu>
        </item>

    </group>
</menu>