<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 Dmitry Monakhov.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"

            android:minHeight="?attr/actionBarSize"

    />
    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
    >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal" android:paddingTop="30dp">


            <TextView
                    android:id="@+id/arc_title1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_title1_db"
                    android:textSize="@dimen/text_size_head"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arc_export_db_text"
                        android:textSize="@dimen/text_size_small"/>

                <Button
                        android:id="@+id/btnExportDb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_export"
                        android:onClick="exportDB"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arc_import_db_text"
                        android:textSize="@dimen/text_size_small"/>

                <Button
                        android:id="@+id/btnImportDb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_import"
                        android:onClick="importDB"/>

            </LinearLayout>


            <TextView
                    android:id="@+id/arc_title2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_title2_db"
                    android:textSize="@dimen/text_size_head"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_small"
                        android:text="@string/arc_export_text_text"/>

                <Button
                        android:id="@+id/btnExportTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_export"
                        android:onClick="exportTxt"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_small"
                        android:text="@string/arc_import_text_text"/>

                <Button
                        android:id="@+id/btnImportTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_import"
                        android:onClick="importTxt"/>

            </LinearLayout>
            <TextView
                    android:id="@+id/arc_title3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arc_title_google"
                    android:textSize="@dimen/text_size_head"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arc_export_google"
                        android:textSize="@dimen/text_size_small"/>

                <Button
                        android:id="@+id/btnExportGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_export"
                        android:onClick="exportGoogle"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txGoogleAuto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arc_google_auto"
                        android:textSize="@dimen/text_size_small"/>

                <CheckBox
                        android:id="@+id/cbGoogleAuto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cb_auto_backup"
                />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/arc_txt6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/arc_import_google"
                        android:textSize="@dimen/text_size_small"/>

                <Button
                        android:id="@+id/btnImportGoogle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bt_import"
                        android:onClick="importGoogle"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>


